fix: inline contents wrapping

--- a/src/App.css
+++ b/src/App.css
@@ -183,13 +183,8 @@ h1{
   opacity: 0.4;
   width: 458px;
   height: 368px;
-  /* display: none; */
+  display: none;
   color: white;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .overlay-contents{
@@ -207,6 +202,13 @@ h1{
 
 .work-square:hover{
   box-shadow: 5px 5px 20% rgba(0, 0, 0, 0.2);
+}
+
+.work-square:hover .work-square-overlay{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .overlay-contents p{
@@ -424,20 +426,21 @@ h1{
     gap: 60px;
     align-items: center;
     width: 100%;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     justify-content: center;
   }
 
-  .inline-contents > * {
+  /* .inline-contents > * {
     min-width: 70px;
-    margin: 0 auto; /* add this */
-  }
+    margin: 0 auto;
+  } */
 
   .links-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 30px;
     margin-bottom: 20px;
+    justify-content: center;
   }
   
 .link {
@@ -447,7 +450,7 @@ h1{
   display: inline-flex;
   align-items: center;
   padding-left: 10px;
-  padding-right: 10px;
+  padding-right: 15px;
   gap:10px;
   text-decoration: unset !important;
 }
@@ -506,12 +509,11 @@ h1{
     gap: 30px;
     justify-content: space-between;
     margin-top: 60px;
-    margin-bottom: 60px;
   }
 
   .inline-contents .subsections-container{
-    padding-left: unset;
-    padding-right: unset;
+    /* padding-left: unset;
+    padding-right: unset; */
     margin-top:unset;
   }
   
@@ -523,7 +525,8 @@ h1{
 
   .collapse-button {
     display: flex;
-    justify-content: flex-start;
+    /* justify-content: flex-start; */
+    justify-content: space-between !important;
     text-align: start;
     width: 100%;
     height: fit-content;
@@ -816,5 +819,16 @@ figcaption{
   max-height: 100%;
   object-fit: cover;
 }
-
 /* END SLIDESHOW CONTAINER STYLING */
+
+
+
+@media (max-width: 1100px) {
+  .inline-contents{
+    flex-direction: column;
+  }
+
+  img{
+    min-width: 350px !important;
+  }
+}
